# webtask

./: .env.example  .env.test.example  .gitignore  404.html  CLAUDE.md  LICENSE  MANIFEST.in  README.md  REFACTOR_PLAN.md  TODO.md  cleanup_docstrings.py  index.html  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml  test_logging.py
.github/workflows/: docs.yml  lint.yml  pr.yml  publish.yml  test-e2e.yml  test-integration.yml  test-unit.yml  test.yml
api/: index.html
api/agent/: index.html
api/browser/: index.html
api/context/: index.html
api/data-classes/: index.html
api/element/: index.html
api/llm/: index.html
api/page/: index.html
api/webtask/: index.html
architecture/: index.html
blog/: index.html
community/: index.html
debug/: llm_call_1.json  llm_call_10.json  llm_call_11.json  llm_call_2.json  llm_call_3.json  llm_call_4.json  llm_call_5.json  llm_call_6.json  llm_call_7.json  llm_call_8.json  llm_call_9.json  summary.txt
docs/: architecture.md  blog.md  community.md  design_file_upload_support.md  examples.md  getting-started.md  index.md  mcp-server.md  outline.md  proposer_context_example.md  pydantic_llm_responses.md  refactor_proposer_only.md  refactor_task_context.md  scheduler-worker-verifier-design.md  todo.md
docs/api/: agent.md  browser.md  context.md  data-classes.md  element.md  index.md  llm.md  page.md  webtask.md
docs/guides/: cookies.md  custom-llm.md
examples/: bedrock_autonomous.ipynb  computer_use_demo.ipynb  demo_video.py  execute_step_example.py  existing_browser_connection.ipynb  existing_browser_integration.py  github_search_autonomous.ipynb  google.py  google_computer_use.ipynb  google_search.ipynb  index.html  selector_demo.ipynb  shopping_cart_demo.ipynb  task_execution_log.txt  tool_website_demo.ipynb  tool_website_demo.py  trader_joe.ipynb
examples/debug/: llm_call_1.json  llm_call_10.json  llm_call_11.json  llm_call_2.json  llm_call_3.json  llm_call_4.json  llm_call_5.json  llm_call_6.json  llm_call_7.json  llm_call_8.json  llm_call_9.json  manager_session_1_iter_1.txt  manager_session_2_iter_1.txt  session_1_planner_iter_1.txt  subtask_0_session_1_worker_iter_1.txt  subtask_0_session_1_worker_iter_2.txt  subtask_0_session_1_worker_iter_3.txt  subtask_0_session_1_worker_iter_4.txt  subtask_0_session_2_verifier_iter_1.txt  subtask_1_session_1_worker_iter_1.txt  subtask_1_session_1_worker_iter_2.txt  subtask_1_session_1_worker_iter_3.txt  subtask_1_session_1_worker_iter_4.txt  subtask_1_session_2_verifier_iter_1.txt  subtask_2_session_1_worker_iter_1.txt  subtask_2_session_1_worker_iter_2.txt  subtask_2_session_1_worker_iter_3.txt  subtask_2_session_2_verifier_iter_1.txt  summary.txt
getting-started/: index.html
guides/cookies/: index.html
guides/custom-llm/: index.html
mcp-server/: index.html
prompts/agent/: proposer.yaml  verifier.yaml
prompts/selector/: natural_selector.yaml
scripts/: README.md  pr.sh
search/: search_index.json
src/webtask/: __init__.py  agent.py  constants.py  exceptions.py  result.py  webtask.py
src/webtask/_internal/: config.py
src/webtask/_internal/accessibility/: axnode.py
src/webtask/_internal/agent/: __init__.py  action_tracker.py  agent_browser.py  file_manager.py  message.py  run.py  selector.py  session_browser.py  subtask.py  subtask_execution.py  subtask_manager.py  subtask_queue.py  task.py  task_context.py  task_execution.py  task_executor.py  task_runner.py  tool.py  tool_call.py  tool_registry.py  tools.py  verifier_browser.py
src/webtask/_internal/cdp/: __init__.py
src/webtask/_internal/context/: __init__.py  llm_dom_context.py
src/webtask/_internal/dom/: __init__.py  domnode.py  selector.py  snapshot.py
src/webtask/_internal/dom_processing/: __init__.py
src/webtask/_internal/llm/: __init__.py  context.py  json_schema_utils.py  message_filter.py  message_purger.py  typed_llm.py
src/webtask/_internal/media/: __init__.py  image.py
src/webtask/_internal/natural_selector/: __init__.py  schema.py  selector.py
src/webtask/agent/: __init__.py  agent.py  agent_browser.py  executer.py  execution_logger.py  llm_browser.py  proposer.py  response.py  result.py  role.py  step.py  step_history.py  subtask_queue.py  task.py  task_context.py  task_executor.py  task_manager.py  throttler.py  tool.py  tool_call.py
src/webtask/browser/: __init__.py  browser.py  context.py  cookies.py  element.py  page.py  session.py
src/webtask/dom/: __init__.py  dom_context_config.py  domnode.py  selector.py  snapshot.py
src/webtask/dom_processing/: __init__.py
src/webtask/integration/: __init__.py
src/webtask/integrations/: __init__.py
src/webtask/llm/: __init__.py  content.py  context.py  llm.py  llm_v2.py  message.py  tokenizer.py  tool.py  typed_llm.py  validated_llm.py
src/webtask/llm_browser/: __init__.py  bounding_box_renderer.py  dom_context_builder.py  dom_filter_config.py  llm_browser.py  page_context_builder.py  selector.py  web_context_builder.py
src/webtask/mcp_server/: __init__.py  __main__.py  config.py  server.py  session_manager.py
src/webtask/media/: __init__.py  image.py
src/webtask/natural_selector/: selector.py
src/webtask/naturalselector/: selector.py
src/webtask/page_context/: __init__.py  bounding_box_renderer.py  dom_context_builder.py  page_context_builder.py
src/webtask/prompts/: __init__.py  markdown_builder.py  planner_prompt.py  prompt_library.py  selector_prompt.py  system_prompt_builder.py  verifier_prompt.py  worker_prompt.py
src/webtask/prompts_data/: README.md
src/webtask/testing/: __init__.py  recording_llm.py
src/webtask/utils/: __init__.py  json_parser.py  throttler.py  url.py  wait.py
stylesheets/: extra.css
tests/: conftest.py
tests/e2e/: conftest.py  test_shopping_cart.py
tests/e2e/fixtures/: README.md
tests/integration/: conftest.py
tests/integration/agent/: __init__.py  test_goto.py
tests/integration/llm/: test_bedrock.py
tests/unit/agent/: test_agent_methods.py  test_verdict.py
(+732 files in other folders)
